--- a/data/posts/react-vite.mdx
+++ b/data/posts/react-vite.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Cómo iniciar un proyecto React con Vite"
-date: "2021-07-22"
+title: "Origami como Ingeniería..."
+date: "2021-11-06"
 tags:
-  - "🧑🏻‍💻 Desarrollo"
-  - "React"
+  - "🧑🏻‍💻 Historia"
+  - "Origami"
 ---
 
 [Vite](https://vitejs.dev/) es una herramienta de tooling para el Frontend. Lo puedes agrupar
