--- a/data/posts/travis-despliegue-integracion-continua.mdx
+++ b/data/posts/travis-despliegue-integracion-continua.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Cómo configurar Travis como herramienta para Integración y Despliegue continuo"
-date: "2020-02-29"
+title: "¿Qué es el Origami y para qué sirve?"
+date: "2021-11-03"
 banner: "/images/travis-despliegue-integracion-continua/travis-seo.png"
 tags:
-  - "💻 Desarrollo"
+  - "💻 Origami"
 ---
 
 Integración Continua o _Continuous Integration (CI)_ y el Despliegue Continuo o _Continuous Deployment_ son dos términos que suelen ser mencionados juntos. Se refiere a una serie de tareas repetitivas como son testing, building y desplegar a producción una aplicación/web/software.
