--- a/data/posts/workspace.mdx
+++ b/data/posts/workspace.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Mi espacio de trabajo (version 2021) para teletrabajar desde casa"
+title: "5 Figuras de animales para iniciar a los niños en el origami"
 tags:
   - "🙋🏻‍♂️ Personal"
-  - "💻 Desarrollo"
-date: "2021-01-04"
+  - "💻 Origami"
+date: "2021-11-04"
 ---
 
 Con motivo de la pandemia del Covid-19, el **teletrabajo o trabajo desde casa** se ha impuesto
