--- a/data/posts/mochila.mdx
+++ b/data/posts/mochila.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Un Setup en tu mochila"
-date: "2020-08-09"
+title: "8 beneficios de hacer figuras de origami"
+date: "2021-11-04"
 tags:
-  - "✈️ Viajes"
-  - "💻 Desarrollo"
+  - "✈️ Beneficios"
+  - "💻 Origami"
 ---
 
 Tener un setup para trabajar en remoto desde cualquier sitio
