modificacion Historia del origami

--- a/data/posts/historia-origami.mdx
+++ b/data/posts/historia-origami.mdx
@@ -6,42 +6,82 @@ tags:
   - "🗿 Origami"
 ---
 
-El origen del Origami. Pensamos que es originario de Japón, y algunos lo definen como el arte japonés que se forma doblando hojas de papel. En realidad, no se originó en Japón sino en China alrededor del siglo primero o segundo y no fue sino hasta el siglo sexto que llegó a Japón llevado ahí por los monjes.
+El Origami, se pensaba que es originario de Japón, pero en los registros de este arte en realidad, no se originó en Japón sino en China a finales del siglo primero y no fue sino hasta el siglo sexto que llegó a Japón llevado ahí por los monjes, y se lo definió como el arte de doblar hojas de papel sin tener la intervención de una tijera en el momento de plegar.
+Debido a la época, el papel no era tan sencillo de conseguir, por lo cual solo era accesible a la clase rica y privilegiada y por supuesto a la clase religiosa por lo que en un principio el origami se utilizaba únicamente con fines religiosos, y en importantes ceremonias.
 
-El papel no era tan sencillo de conseguir, el papel hecho a mano era accesible solo a la clase rica y privilegiada y por supuesto a la clase religiosa por lo que en un principio el origami se utilizaba únicamente con fines religiosos, y en importantes ceremonias.
+Con la llegada del origami a Japón y la accesibilidad al papel con más libertad este arte se comenzó a desarrollarse poco a poco, donde además se fueron creando diferentes técnicas de doblado de papel, lo que conllevo que los origamistas hicieran diferentes tipos de papel para lograr un mejor acabado en sus figuras y que a su vez el origami fuera difundido para la libre accesibilidad a todo tipo de clases sociales.
 
-Poco a poco las diferentes técnicas de fabricación de papel lograron que el origami fuera permeando a las clases menos afortunadas pero igual de creativas y hábiles en la formación de figuras.
+El origen de la palabra “Origami” proviene de los vocablos “ORI” que significa doblar o plegar y “GAMI” que significa papel, pero conforme el avance del tiempo y el impacto del origami en la sociedad, este arte se veía en constante desarrollo por lo que se creó el “Kirigami” que proviene del vocablo “KIRI” que significa cortar y “GAMI” que significa papel, el cual consiste en cortar el papel basado en un patrón.
 
-### Origami en el mundo.
+![Origami 1](/images/histotoria-origami/rhino.gif)
 
-Fueron los moros los que llevaron el origami a Europa entre los siglos 9 y 12, ellos sólo utilizaban el origami para crear figuras geométricas ya que su religión les prohibía hacer figuras de animales. Por supuesto con la colonización de América este arte se fue expandiendo por el mundo y hoy es tan popular con niños como con adultos.
+#### Origami en el mundo.
 
-Ya para el siglo 17 el arte de doblar papel en Japón era una forma de entretenimiento de la población en general, fue entonces cuando las diferentes corrientes del origami fueron surgiendo.
+Fueron los moros los que llevaron el origami a Europa entre los siglos 9 y 12, ellos sólo utilizaban el origami para crear figuras geométricas ya que su religión les prohibía hacer figuras de animales. Por supuesto con la colonización de América este arte se fue expandiendo por el mundo y hoy es tan popular tanto en niños como en adultos.
+Ya para el siglo 17 el arte de doblar papel en Japón era una forma de entretenimiento de la población en general, hoy en día el impacto del origami se ha dado en gran porcentaje que ha se han desarrollado diferentes técnicas para aplicaciones dentro de la ciencia e ingeniería.
+Uno de las grandes aplicaciones del origami en el mundo se dio en la creación de antenas con paneles satelitales plegables, que fueron enviadas al espacio por la nasa, con la ayuda del físico Robert lang, quienes en conjunto desarrollaron una forma eficaz de plegado y desplegado de paneles solares, para asi poder enviar grandes estructuras al espacio.
 
-Tipos de Origami. Así el día de hoy hay desde origami muy estricto en el cual no se permiten hacer cortes ya que la figura se debe de lograr con sólo dobleces de una única hoja de papel, hasta origami más flexible en el que se permiten cortes pero no pegamentos. Diferentes corrientes tienen diferentes reglas para la formación de figuras estéticas a partir de papel.
+![Origami 1](/images/histotoria-origami/1.jpg)
 
-![Console.log mostrando los datos recibidos](/images/histotoria-origami/cangrejo.jpg)
+#### Clasificación del Origami.
 
-### Clasificación del Origami.
+Gracias a su gran apogeo y desarrollo el origami se fue clasificando por:
 
-Una vez creado, dirijete al directorio creado ejecuta el comando de instalación:
+- **1. Origami Tradicional:** Consiste en la creación de figuras en base de un papel ya sea cuadrado, rectangular, triangular, etc, estos a su vez se diferencian por el tipo de figura a plegar.
 
-Algunos autores clasifican el arte de doblar papel según la época en la que fueron desarrolladas las diferentes técnicas, otros, han llegado a clasificar 80 tipos diferentes de origami según la técnica utilizada o el tipo de papel que usamos, algunos de los más conocidos y memorables son:
+  **a) Animales**
+  ![Origami 2](/images/histotoria-origami/2.jpg)
 
-- Origami de acción (figuras de papel que realizan algún tipo de movimiento, como ranas que brincan, aviones de papel,juegos, figuras, personajes, adornos para celebraciones, etc.)
+  **b) Insectos**
+  ![Origami 3](/images/histotoria-origami/3.jpg)
 
-- **Origami Sonoro** (modelos de origami que producen sonidos)
-- **Rompecabezas de origami**
-- **Origami Tradicional** (puede ser en 2 o 3 dimensiones)
-- **Origami con hojas de papel cuadradas, con hojas de papel rectangulares o con hojas de papel circulares.**
-- **Origami Modular** (se utilizan múltiples figuras semejantes para formar un módulo)
-- **Origami Compuesto** (en el cual el modelo final está compuesto por dos o más hojas de papel cada una doblada de forma diferente)
-- **Origami Húmedo** (se dobla el papel mientras esta humedecido lo que permite dobleces mas orgánicos y curvos que permaneces así una vez que el papel se seca)
-- **Kirigami** (es el origami que permite que se realicen cortes en el papel, bien de la palabra “kiru” que significa cortar, es con esta técnica que se hacen los “copos de nieve de papel y las figuras de niños tomados de la mano que todos conocemos)
-- **Arquitectura de Origami** en la cual se aprecian figuras de edificios , casa y puentes cuando el papel está a una inclinación con un ángulo de 90º
+  **c) Personajes**
+  ![Origami 4](/images/histotoria-origami/4.jpg)
 
-Y así podríamos seguir enumerando las múltiples clasificaciones de lo que la creatividad humana ha logrado hacer con un simple pero bello pedazo de papel.
+  **d) Especies forestales**
+  ![Origami 5](/images/histotoria-origami/5.jpg)
 
-El origami también sirve para formar hermosos objetos útiles con papel como cajas y libros.
+  **e) Rostros**
+  ![Origami 6](/images/histotoria-origami/6.jpg)
 
-Fuente: manualidades.about.com
+- **2) Origami Modular:** Consiste en realizar varias figuras denominadas módulos el cual al unirlos o entre lazarlas estas den forma a una figura o escultura.
+
+  ![Origami 7](/images/histotoria-origami/7.jpg)
+
+- **3) Origami Sonoro:** Son figuras conocidas por realizar sonidos al interactuar con ellos.
+
+  ![Origami 8](/images/histotoria-origami/8.jpg)
+
+- **4) Origami de acción:** Son aquellas figuras que realizan algún tipo de movimiento o acción ya sea brincar, moverse, volar, etc.
+
+  ![Origami 9](/images/histotoria-origami/9.jpg)
+
+- **5) Origami Húmedo:** Consiste en plegar figuras manteniendo el papel siempre húmedo con el fin de que los dobleces queden firmes y marcados, permitiendo un mejor acabado de detalles en la figura final.
+
+  ![Origami 10](/images/histotoria-origami/10.jpg)
+
+- **6) Teselado:** Esta basado en crear una cuadricula o CP a base de figuras geométricas ya sean triangulares, cuadradas, hexagonales, etc.
+
+  ![Origami 11](/images/histotoria-origami/11.jpg)
+
+### Kirigami
+
+El kirigami se crea a partir del plegado del papel y de cortarlo para crear diferentes tipos de figuras ya sean abstractas o alguna figura en especial, estos a su vez se clasifican en:
+
+- **1) Cortar y girar**
+
+La idea de esta técnica concreta trata de crear modelos en 3D. Tan solo con algunas herramientas de corte y diversas dobleces se pueden realizar resultados muy originales! Algunos de los trabajos que se engloban en esta técnica son los móviles realizados con figuras geométricas concéntricas o las ilusiones ópticas como esta:
+
+![Origami 12](/images/histotoria-origami/12.jpg)
+
+- **2) Cortar y separar**
+
+Esta técnica es la más sencilla y la más popular ya que todos la hemos realizado sin saberlo alguna vez. Para cortar y separar solo tienes que doblar el papel y utilizar la parte externa como modelo. Al recortar el papel, la forma se repetirá en el resto de pliegues. Esta técnica es la utilizada para realizar las famosas cadenas humanas:
+
+![Origami 13](/images/histotoria-origami/13.jpg)
+
+- **3) Troquelados**
+
+La técnica de troquelado es una de las más difíciles del kirigami ya que requiere conocimientos de diversas técnicas. El troquelado se utiliza mucho para la creación de kirigamis arquitectónicos o para las tarjetas pop-up.
+
+![Origami 14](/images/histotoria-origami/14.jpg)
