add contenido, paseo virtual, objeto3d

--- a/data/pages/sobre-nosotros.mdx
+++ b/data/pages/sobre-nosotros.mdx
@@ -10,21 +10,7 @@ La presente es un Proyecto orientado al conocimiento del **Origami**, nos centra
 
 Nuestro principal objetivo es brindar a los visitantes de este sitio la mejor de las experiencias y lograr con esto captar su interés hacia el **Origami**.
 
-## Descripción de la empresa
-
-“Pejelagartos” es una empresa pionera en combinar el diseño 3D con el arte del Origami y Kirigami.
-
-## Misión
-
-Promover la cultura japonesa mediante el arte del Origami y la animación 3D, con el objetivo de propiciar un intercambio cultural entre estudiantes y profesionales además informar a quienes no conocen de este maravilloso mundo.
-
-## Visión
-
-Combinar el arte y la ingeniería en informática para realizar figuras 3D de Origami y Kirigami de manera profesional, además de convertirnos en la empresa reconocida del país.
-
-![empresa](/images/sobre-mi/LogoPegelagartos_V2.png)
-
-## 👨‍🎓👩‍🎓👨‍🎓👨‍🎓👨‍🎓 Grupo 4
+## Grupo 4
 
 ![Grupo 4](/images/sobre-mi/Todos.jpeg)
 
