--- a/data/posts/creacion-logos.mdx
+++ b/data/posts/creacion-logos.mdx
@@ -21,7 +21,7 @@ Para finalizar el diseño de nuestro logo, se decidió hacer referencia a la ins
 
 ![ creación](/images/creacion-logos/6.png)
 
-## Desarrollo del Logo del Museo.
+## Desarrollo del Logo del Muse
 
 Para la creación de una imagen ícono de nuestro museo virtual, decidí basarme a aquellas imágenes clásicas y minimalistas que representan a los museos, obteniendo un resultado tal y como el siguiente.
 
