--- a/data/posts/historia-origami.mdx
+++ b/data/posts/historia-origami.mdx
@@ -15,7 +15,7 @@ El origen de la palabra “Origami” proviene de los vocablos “ORI” que sig
 
 ![Origami 1](/images/histotoria-origami/rhino.gif)
 
-#### Origami en el mundo.
+#### Origami en el mundo
 
 Fueron los moros los que llevaron el origami a Europa entre los siglos 9 y 12, ellos sólo utilizaban el origami para crear figuras geométricas ya que su religión les prohibía hacer figuras de animales. Por supuesto con la colonización de América este arte se fue expandiendo por el mundo y hoy es tan popular tanto en niños como en adultos.
 Ya para el siglo 17 el arte de doblar papel en Japón era una forma de entretenimiento de la población en general, hoy en día el impacto del origami se ha dado en gran porcentaje que ha se han desarrollado diferentes técnicas para aplicaciones dentro de la ciencia e ingeniería.
@@ -23,7 +23,7 @@ Uno de las grandes aplicaciones del origami en el mundo se dio en la creación d
 
 ![Origami 1](/images/histotoria-origami/1.jpg)
 
-#### Clasificación del Origami.
+#### Clasificación del Origami
 
 Gracias a su gran apogeo y desarrollo el origami se fue clasificando por:
 
