--- a/data/pages/sobre-nosotros.mdx
+++ b/data/pages/sobre-nosotros.mdx
@@ -16,10 +16,14 @@ Nuestro principal objetivo es brindar a los visitantes de este sitio la mejor de
 
 ## Ruben Valencia **6795**
 
-Experiencia centrada en el desarrollador web con mas de 5 años de experiencia.
+Experiencia centrada en el desarrollador web con mas de 5 años de.
 
 **Technologias**
 
+- Html5
+- Css
+- JavaScript
+- Node.js
 - Next.js
 - React.js
 - Vercel
