--- a/data/pages/sobre-nosotros.mdx
+++ b/data/pages/sobre-nosotros.mdx
@@ -68,4 +68,12 @@ Documentador y asegurador de Calidad.
 
 ## Melany Secaira **6841**
 
+Jefa de proyectos .
+
+**Technologias**
+
+- C#
+- C++
+- SQL
+
 ![Melany Secaira](/images/sobre-mi/Melany.jpeg)
