--- a/data/pages/acerca-de.mdx
+++ b/data/pages/acerca-de.mdx
@@ -2,9 +2,10 @@
 title: Pejelagartos
 ---
 
-## Descripción de la empresa
+#### Descripción de la empresa
 
 **“Pejelagartos”** es una empresa pionera en combinar el diseño 3D con el arte del Origami y Kirigami.
+![empresa](/images/sobre-mi/cocodrilou.png)
 
 ### Misión
 
@@ -13,5 +14,3 @@ Promover la cultura japonesa mediante el arte del Origami y la animación 3D, co
 ### Visión
 
 Combinar el arte y la ingeniería en informática para realizar figuras 3D de Origami y Kirigami de manera profesional, además de convertirnos en la empresa reconocida del país.
-
-![empresa](/images/sobre-mi/LogoPegelagartos_V2.png)
