--- a/data/posts/historia-origami.mdx
+++ b/data/posts/historia-origami.mdx
@@ -6,22 +6,54 @@ tags:
   - "🗿 Origami"
 ---
 
-El Origami, se pensaba que es originario de Japón, pero en los registros de este arte en realidad, no se originó en Japón sino en China a finales del siglo primero y no fue sino hasta el siglo sexto que llegó a Japón llevado ahí por los monjes, y se lo definió como el arte de doblar hojas de papel sin tener la intervención de una tijera en el momento de plegar.
-Debido a la época, el papel no era tan sencillo de conseguir, por lo cual solo era accesible a la clase rica y privilegiada y por supuesto a la clase religiosa por lo que en un principio el origami se utilizaba únicamente con fines religiosos, y en importantes ceremonias.
+El origen del Origami, comúnmente pensado, suscitado en Japón, es una falacia ad populum,
+en realidad, se remonta a la creación del papel mismo (el cual es una invención china)
+alrededor del siglo I o II d. C. El papel no llegó a Japón hasta el siglo sexto, siendo allí cuando
+se integró a la cultura japonesa.
 
-Con la llegada del origami a Japón y la accesibilidad al papel con más libertad este arte se comenzó a desarrollarse poco a poco, donde además se fueron creando diferentes técnicas de doblado de papel, lo que conllevo que los origamistas hicieran diferentes tipos de papel para lograr un mejor acabado en sus figuras y que a su vez el origami fuera difundido para la libre accesibilidad a todo tipo de clases sociales.
+El papel era un bien preciado, principalmente accesible a la clase noble y rica, por lo cual, el
+doblar el papel era todo un lujo, convirtiéndose así en una forma de representar la
+superioridad social y económica en la época. El secreto del papel permaneció en Asia por
+900 años más.
 
-El origen de la palabra “Origami” proviene de los vocablos “ORI” que significa doblar o plegar y “GAMI” que significa papel, pero conforme el avance del tiempo y el impacto del origami en la sociedad, este arte se veía en constante desarrollo por lo que se creó el “Kirigami” que proviene del vocablo “KIRI” que significa cortar y “GAMI” que significa papel, el cual consiste en cortar el papel basado en un patrón.
+“No fue tas la peste negra que asoló Europa durante el siglo XIV, que causó la muerte de
+millones de personas que la industria del papel floreció” (Santacruz, 2014), por ende, la
+facilidad de difusión permitió el auge y por ende el desarrollo del doblado del papel para
+crear figuras.
+
+Si bien el origami (折り紙) no se originó en Japón, los japoneses fueron los responsables de
+expandirlo y asignarle un término proveniente de las palabras (oru=plegar) y (kami=papel)
+al arte del plegado del papel.
+
+El origen de la técnica origami está ligada a la cultura Shinto. Los primeros ejemplos de
+origami se remontan a tiras de papel dobladas para crear formas geométricas.
+Incorporándose a la cultura Japonesa y finalmente expandiéndose en el mundo.
 
 ![Origami 1](/images/histotoria-origami/rhino.gif)
 
 #### Origami en el mundo
 
-Fueron los moros los que llevaron el origami a Europa entre los siglos 9 y 12, ellos sólo utilizaban el origami para crear figuras geométricas ya que su religión les prohibía hacer figuras de animales. Por supuesto con la colonización de América este arte se fue expandiendo por el mundo y hoy es tan popular tanto en niños como en adultos.
-Ya para el siglo 17 el arte de doblar papel en Japón era una forma de entretenimiento de la población en general, hoy en día el impacto del origami se ha dado en gran porcentaje que ha se han desarrollado diferentes técnicas para aplicaciones dentro de la ciencia e ingeniería.
-Uno de las grandes aplicaciones del origami en el mundo se dio en la creación de antenas con paneles satelitales plegables, que fueron enviadas al espacio por la nasa, con la ayuda del físico Robert lang, quienes en conjunto desarrollaron una forma eficaz de plegado y desplegado de paneles solares, para asi poder enviar grandes estructuras al espacio.
+Fueron los moros los que llevaron el origami a Europa entre los siglos 9 y 12, ellos sólo
+utilizaban el origami para crear figuras geométricas ya que su religión les prohibía hacer
+figuras de animales. Por supuesto con la colonización de América este arte se fue
+expandiendo por el mundo y hoy es tan popular en niños como con adultos.
+
+Ya para el siglo 17 el arte de doblar papel en Japón era una forma de entretenimiento de la
+población en general, fue entonces cuando las diferentes corrientes del origami fueron
+surgiendo.
+
+Con la aparición de más interpretación, el origami como arte de ha ido ampliando a lo largo
+de la historia.
 
 ![Origami 1](/images/histotoria-origami/1.jpg)
+
+#### Reglas Fundamentales
+
+1. Se debe usar una sola hoja cuadrada
+
+2. Están prohibidos pegamentos y tijeras
+
+3. Se pueden realizar tantos pliegues como sean necesarios
 
 #### Clasificación del Origami
 
@@ -85,3 +117,5 @@ Esta técnica es la más sencilla y la más popular ya que todos la hemos realiz
 La técnica de troquelado es una de las más difíciles del kirigami ya que requiere conocimientos de diversas técnicas. El troquelado se utiliza mucho para la creación de kirigamis arquitectónicos o para las tarjetas pop-up.
 
 ![Origami 14](/images/histotoria-origami/14.jpg)
+
+Autor: Cristian Proaño y Melany Secaira
