--- a/data/pages/sobre-nosotros.mdx
+++ b/data/pages/sobre-nosotros.mdx
@@ -16,7 +16,7 @@ Nuestro principal objetivo es brindar a los visitantes de este sitio la mejor de
 
 ## Ruben Valencia **6795**
 
-Experiencia centrada en el desarrollador web con mas de 5 años de.
+Experiencia centrada en el desarrollador web con mas de 5 años.
 
 **Technologias**
 
