--- a/data/objetos/objeto-puerta.mdx
+++ b/data/objetos/objeto-puerta.mdx
@@ -46,4 +46,6 @@ Creamos el componente tirador
 
 ![SketChup](/images/objetos-3D/puerta/puerta.gif)
 
+- ** Autor: ** Ruben Valencia
+
 Enlace para descargar el objeto [Puerta](https://drive.google.com/file/d/1sTDeXy7n98FETmugmsooXjtEdq7VMBdZ/view?usp=sharing)
