--- a/data/objetos/objeto-estante.mdx
+++ b/data/objetos/objeto-estante.mdx
@@ -72,4 +72,6 @@ Una vez realizado esto, le agreagmos color y el modelado en Sketchup está termi
 
 ![SketChup](/images/objetos-3D/estante/estante.gif)
 
+- ** Autor: ** Santiago Guaylla
+
 Enlace para descargar el objeto [Estante](https://drive.google.com/file/d/1r-xnaT-A0UJ0zEfqKSyRCfs4QOjlqE41/view?usp=sharing)
