Entrada: maqueta virtual y fisica del paseo virtual de origami y kirigami

--- a/data/posts/historia-origami.mdx
+++ b/data/posts/historia-origami.mdx
@@ -118,4 +118,4 @@ La técnica de troquelado es una de las más difíciles del kirigami ya que requ
 
 ![Origami 14](/images/histotoria-origami/14.jpg)
 
-Autor: Cristian Proaño y Melany Secaira
+Autores: Cristian Proaño y Melany Secaira
