Corrección media query css

--- a/data/posts/maqueta-virtual-museo-origami-y-kirigami.mdx
+++ b/data/posts/maqueta-virtual-museo-origami-y-kirigami.mdx
@@ -101,3 +101,5 @@ Para realizar la creación del escenario, se usará el software de diseño Blend
 ![Maqueta](/images/maqueta-virtual-museo/exterior.gif)
 
 ![Maqueta](/images/maqueta-virtual-museo/interior.gif)
+
+Autor: Cristian Proañ
