--- a/data/posts/maqueta-virtual-museo-origami-y-kirigami.mdx
+++ b/data/posts/maqueta-virtual-museo-origami-y-kirigami.mdx
@@ -3,7 +3,7 @@ title: "Construcción de la maqueta virtual del museo de Origami y Kirigami "
 date: "2021-12-20"
 tags:
   - "🧑🏻‍💻 Maqueta virtual"
-  - "⚒️🛠️ Construcción"
+  - "🛠️ Construcción"
 ---
 
 Para realizar la creación del escenario, se usará el software de diseño Blender.
